--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -931,11 +931,10 @@ async function loadReportCardTasks() {
       let html = '<h3 class="text-xl font-semibold text-gray-800">Tasks</h3><div class="grid gap-4">';
       tasks.forEach(t => {
         const isDrafted = t.alreadyDrafted;
-        const disabledAttr = isDrafted ? "disabled" : "";
         const btnClass = isDrafted
-          ? "bg-gray-400 cursor-not-allowed"
+          ? "bg-indigo-600 hover:bg-indigo-700"   // colore diverso se esiste draft
           : "bg-blue-600 hover:bg-blue-700";
-        const btnLabel = isDrafted ? "Draft" : "Write Report";
+        const btnLabel = isDrafted ? "Edit Draft" : "Write Report";
 
         html += `
           <div class="p-4 bg-white rounded-xl shadow border border-gray-200">
@@ -945,8 +944,7 @@ async function loadReportCardTasks() {
             <button 
               class="writeReportBtn mt-3 text-white px-4 py-2 rounded-lg ${btnClass}"
               data-student="${t.studentId}" 
-              data-contract="${t.contractId}"
-              ${disabledAttr}>
+              data-contract="${t.contractId}">
               ${btnLabel}
             </button>
           </div>
@@ -956,7 +954,7 @@ async function loadReportCardTasks() {
       reportCardsContainer.innerHTML = html;
     }
 
-    // mostra no-shows solo a Head Coach
+    // --- no-shows come già gestiti ---
     if (CURRENT_COACH_ROLE === "Head Coach" && resp.noShows && resp.noShows.length > 0) {
       let html = `
         <div class="flex items-center justify-between mb-2">
